# basin-volume

./: .gitignore  README.md  basin_ellipsoid.py  basin_overnight.py  basin_precondition.ipynb  basin_volume.py  cumulants.ipynb  delta_bulk.py  delta_bulk_size.ipynb  delta_size.ipynb  delta_size_adam.ipynb  hit_run.ipynb  jacobian.ipynb  jacobian.py  job3.sh  job5.sh  job6.sh  job6b.sh  job7.sh  meta_poisoning.py  meta_poisoning_nora.py  meta_poisoning_typical.py  mlp.py  mp_typical.ipynb  ode.py  parafac.ipynb  pyproject.toml  requirements.txt  requirements_jax.txt  scratch.ipynb  sgd.py  slab_dataset.py  slab_orig.ipynb
data/: convnext_param_mapping.json  convnext_training.pkl
notebooks/: cifar_train_plots.ipynb  convnext_basins.ipynb  convnext_loss_plots.ipynb  convnext_plots.ipynb  estimators.ipynb  huggingface.ipynb  huggingface_example.ipynb  image.ipynb  jax_replace.ipynb  kl_basins.ipynb  mlp_basins.ipynb  paper_plots.ipynb  plots.ipynb  pythia.ipynb  pythia_basins.ipynb  scaling_up.ipynb  tiny_stories.ipynb
old/: alignment.py  basin_overnight.py  delta_bulk_size.ipynb  ellipsoid-basin-math.ipynb  iclr_experiments.ipynb  job1.sh  job2.sh  job4.sh  job6b.sh  mesa_poisoning_nora.py  meta_poisoning_new.py  meta_poisoning_typical.py  ode.py  parafac.ipynb  scratch.ipynb  slab.ipynb
results/: 31m_checkpoint_scan.pkl  31m_cutoff_scan.pkl  convnext_epsilons_1024_10.pkl  convnext_epsilons_early_1024_10.pkl  convnext_kl_basins.pkl  convnext_timing_1024_100.pkl  pythia_31m_chkpts_10_10.pkl  pythia_31m_chkpts_20_100.pkl  pythia_31m_chkpts_30_1.pkl  pythia_histo_True.pkl  (+16 more)
(+79 files in other folders)
