[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tyche"
description = "NN basin volume estimation"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
dependencies = [
	"numpy",
	"pillow",
	"tqdm",
	"pyyaml",
	"scikit-learn",
	"matplotlib",
	"torch",
	"einops ",
	"simple_parsing",
	"transformers",
	"datasets",
	"torchvision",
	"pytest"
]
